# Gestione-pazienti

./: .gitignore  COMPLETAMENTO.md  GUIDA_RAPIDA.md  PIANO_RIFATTORIZZAZIONE.md  PROGETTAZIONE.md  README.md  REGOLE.md  STATUS.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tabella_2_statiesteri.xlsx  tailwind.config.js  vite.config.js
--name/: package.json
--name/src-tauri/: tauri.conf.json
.github/workflows/: build.yml  release-updater.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  main.rs  models.rs  updater.rs
src/lib/: constants.js
src/lib/components/: ProcedureCard.svelte  SectionHeader.svelte  StatCard.svelte
src/lib/components/ui/: BackCircleButton.svelte  Button.svelte  CVRiskFactors.svelte  Card.svelte  Checkbox.svelte  CloseButton.svelte  Icon.svelte  IconBadge.svelte  IconButton.svelte  Input.svelte  MaskedDateInput.svelte  MaskedTimeInput.svelte  PresetTextArea.svelte  Select.svelte  (+4 more)
src/lib/constants/: status.js
src/lib/data/: comuni.json  stati.json
src/lib/stores/: patientStore.js  procedureStore.js  toastStore.js  updateStore.js
src/lib/templates/: consenso_informato_TAVI.docx  ee_tavi.docx  template_amb_strutturale.docx  template_scheda_procedurale.docx
src/lib/utils/: dateUtils.js  excelExport.js  notify.js  placeSuggestions.js  statistics.js  validationHelpers.js  validators.js
src/lib/views/: AmbulatorioScheduleView.svelte  PatientDetail.svelte  ProcedureForm.svelte  ProceduresList.svelte  Statistics.svelte
